--- a/src/Admin Page/component/Home/OrderDetails/OrderDetails.css
+++ b/src/Admin Page/component/Home/OrderDetails/OrderDetails.css
@@ -1,46 +1,54 @@
-.user-details-container {
-    padding: 20px;
-    background-color: #f8f9fa;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .user-details-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .user-details-table th,
-  .user-details-table td {
-    padding: 12px 15px;
-    text-align: center;
-  }
-  
-  .user-details-table th {
-    background-color: #343a40;
-    color: #ffffff;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-  }
-  
-  .user-details-table td {
-    border-bottom: 1px solid #dddddd;
-  }
-  
-  .user-image {
-    width: 100px;
-    height: 100px;
-    /* border-radius: 50%; */
-  }
-  
-  .user-details-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  .user-details-table tr:hover {
-    background-color: #e2e6ea;
-  }
-  
- 
+.order-details-container {
+  padding: 20px;
+  width: 75%;
+}
+
+.order-details-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.order-details-table th,
+.order-details-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: center;
+}
+
+.order-details-table th {
+  background-color: #f2f2f2;
+}
+
+.inner-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.inner-table th,
+.inner-table td {
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+
+.inner-table th {
+  background-color: #e0e0e0;
+}
+
+.product-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #040404;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: black;
+}
