--- a/src/User Pages/component/orderProducts/OrderProducts.css
+++ b/src/User Pages/component/orderProducts/OrderProducts.css
@@ -1,93 +1,55 @@
-.order-details-container {
+.order-product-container {
   padding: 20px;
-  background-color: #f8f9fa;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 100%;
-  margin: 110px auto;
-  overflow-x: auto;
+  margin: 100px 150px;
+  width: 75%;
 }
 
-.user-details-table {
+.order-details-table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.user-details-table th,
-.user-details-table td {
-  padding: 12px 15px;
+.order-details-table th,
+.order-details-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
   text-align: center;
 }
 
-.user-details-table th {
-  background-color: #343a40;
-  color: #ffffff;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-
-.user-details-table td {
-  border-bottom: 1px solid #dddddd;
-}
-
-.user-image {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-}
-
-.user-details-table tr:nth-child(even) {
+.order-details-table th {
   background-color: #f2f2f2;
 }
 
-.user-details-table tr:hover {
-  background-color: #e2e6ea;
+.inner-table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-
-@media screen and (max-width: 768px) {
-  .order-details-container {
-    margin: 100px 10px;
-    padding: 10px;
-  }
-
-  .user-image {
-    width: 80px;
-    height: 80px;
-  }
-
-  .user-details-table th,
-  .user-details-table td {
-    padding: 8px 10px;
-  }
-
-  .user-details-table th {
-    font-size: 12px;
-  }
-
-  .user-details-table td {
-    font-size: 14px;
-  }
+.inner-table th,
+.inner-table td {
+  border: 1px solid #ddd;
+  padding: 5px;
 }
 
-@media screen and (max-width: 480px) {
-  .order-details-container {
-    margin: 50px 5px;
-    padding: 5px;
-  }
+.inner-table th {
+  background-color: #e0e0e0;
+}
 
-  .user-image {
-    width: 60px; 
-    height: 60px;
-  }
+.product-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
 
-  .user-details-table th,
-  .user-details-table td {
-    padding: 5px 7px; 
-    font-size: 10px;
-  }
+button {
+  padding: 5px 10px;
+  background-color: #040404;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-  .user-details-table {
-    font-size: 12px;
-  }
+button:hover {
+  background-color: black;
 }
