--- a/src/Admin Page/component/Home/Users/userDatas.css
+++ b/src/Admin Page/component/Home/Users/userDatas.css
@@ -88,3 +88,21 @@
     font-size: 14px;
   }
 }
+
+.userById {
+  text-align: center;
+  height: 100%;
+  width: 80%;
+  margin-left: 150px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.userById-container{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+
