--- a/src/popup box/popup.css
+++ b/src/popup box/popup.css
@@ -176,3 +176,10 @@
   pointer-events: none;
   opacity: 0.6;
 }
+
+.spinner{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
